# bibgetter

./: README.markdown  bibgetter.py  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  tests.yml
src/: biber-formatting.conf  bibgetter.py
tests/: test_bibgetter.py
