[project]
name = "bibgetter"
version = "2.1.0"
authors = [
  { name="Pieter Belmans", email="pieterbelmans@gmail.com" },
]
description = "Retrieve and manage Bib(La)TeX entries"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "argparse",
  "arxiv",
  "bibtexparser>=2.0.0b8",
  "fake_useragent",
  "requests",
  "rich",
]

[project.urls]
Homepage = "https://github.com/bibgetter/bibgetter"
Issues = "https://github.com/bibgetter/bibgetter/issues"

[project.scripts]
bibgetter = "bibgetter:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
